[gd_scene load_steps=11 format=3 uid="uid://c258ha18bi4yb"]

[ext_resource type="Texture2D" uid="uid://bd4u2hs44vn01" path="res://objects/props/buzzer/Buzzer.png" id="1_4karb"]
[ext_resource type="Script" path="res://objects/props/buzzer/buzzer.gd" id="1_81qsc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7orgd"]
size = Vector2(48, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_yyxlb"]
radius = 46.0435

[sub_resource type="Animation" id="Animation_l1gyy"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_ycd3t"]
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="Animation" id="Animation_0sxwb"]
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_0cd8j"]
resource_name = "Idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ep0my"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_duf0c"]
_data = {
"GoPush": SubResource("Animation_0sxwb"),
"Idle": SubResource("Animation_0cd8j"),
"Push": SubResource("Animation_l1gyy"),
"RESET": SubResource("Animation_ep0my"),
"Wait": SubResource("Animation_ycd3t")
}

[node name="Buzzer" type="StaticBody2D"]
collision_layer = 64
collision_mask = 67
script = ExtResource("1_81qsc")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
scale = Vector2(4, 4)
texture = ExtResource("1_4karb")
hframes = 3
vframes = 3
metadata/_aseprite_wizard_interface_config_ = {
"pending_changes": {}
}
metadata/_aseprite_wizard_config_ = {
"i_mode": -1,
"keep_anim_length": false,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"player": "AnimationPlayer",
"slice": "",
"source": "res://Aseprite/objectives/Buzzer.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "3d20309287ec9d60e5d971ea8691ec62"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("RectangleShape2D_7orgd")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 67
collision_mask = 67

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_yyxlb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../Sprite2D")
libraries = {
"": SubResource("AnimationLibrary_duf0c")
}

[node name="WaitForRePressTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="WaitForRePressTimer" to="." method="_on_wait_for_re_press_timer_timeout"]
